auth route doc
